@@ -184,8 +184,9 @@ proc libstdc++_init { testfile } {
     set v3-sharedlib 0
     set sharedlibdir [lookfor_file $blddir src/.libs/libstdc++.$shlib_ext]
     if {$sharedlibdir != ""} {
-	if { ([string match "*-*-linux*" $target_triplet]
-	      || [string match "*-*-gnu*" $target_triplet])
+	if { ([string match "*-*-gnu*" $target_triplet]
+	      || [string match "*-*-linux*" $target_triplet]
+	      || [string match "*-*-solaris*" $target_triplet])
 	     && [isnative] } then {
 	    set v3-sharedlib 1
 	    verbose -log "shared library support detected"
